syntax = "proto3";

package dird.protobuf;

// forked from https://github.com/v2fly/v2ray-core/blob/a1ee432d290598a6bc85de11281b6c97573310aa/app/router/routercommon/common.proto
message Domain {
  // Type of domain value.
  enum Type {
    // The value is used as is.
    Plain = 0;
    // The value is used as a regular expression.
    Regex = 1;
    // The value is a root domain.
    RootDomain = 2;
    // The value is a domain.
    Full = 3;
  }

  // Domain matching type.
  Type type = 1;
  // Domain value.
  string value = 2;
}

message GeoSite {
  string country_code = 1;
  repeated Domain domain = 2;
}

message GeoSiteList {
  repeated GeoSite entry = 1;
}
